# aura

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  THIRD_PARTY_LICENSES.md  install.ps1  install.sh  install_bin.sh
.github/workflows/: ci.yml  release.yml
bins/aura-cli/: Cargo.toml
bins/aura-cli/src/: hotkey.rs  main.rs
bins/aura-server/: Cargo.toml
bins/aura-server/src/: main.rs
crates/aura-audio/: Cargo.toml
crates/aura-audio/src/: aec.rs  lib.rs  transport.rs
crates/aura-core/: Cargo.toml
crates/aura-core/src/: brief.rs  callid.rs  checkpoints.rs  config.rs  history.rs  host.rs  lib.rs  private_fs.rs  redaction.rs  session.rs  speech.rs  tools.rs
crates/aura-core/tests/: host_contract.rs  public_surface_fuzz.rs  redaction_fixtures.rs
crates/aura-engine/: Cargo.toml
crates/aura-engine/src/: barge_in.rs  inbox.rs  lib.rs  orchestrator.rs
crates/aura-feeder/: Cargo.toml
crates/aura-feeder/src/: digest.rs  lib.rs  opener_branch.rs  topic_candidate.rs
crates/aura-hosts/: Cargo.toml
crates/aura-hosts/src/: claude.rs  codex.rs  hermes.rs  lib.rs  registry.rs
crates/aura-hosts/src/openclaw/: card.rs  crypto.rs  dispatch.rs  fetcher.rs  gateway.rs  gateway_ws.rs  inbox_ws.rs  mod.rs
crates/aura-tunnel/: Cargo.toml
crates/aura-tunnel/src/: endpoint.rs  iroh_transport.rs  jitter.rs  lib.rs  noise.rs  outbound.rs  reframe.rs  replay.rs  session.rs  transport.rs  wire.rs
crates/aura-voice/: Cargo.toml
crates/aura-voice/src/: byok.rs  compose.rs  lib.rs  openai.rs  realtime_ws.rs  wire.rs  xai.rs
docs/: DISPATCH.md  ONBOARDING.md  ONBOARDING_BIN.md
scripts/: aura-open-port.sh  call-status.sh  inbox.sh  launch-call.sh
skills/: SKILL.md  SKILL_WINDOWS.md
